<resources>
    <string name="app_name">HackTheFuture</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Enter vault</string>
    <string name="action_sign_in_short">Enter vault</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Get pass</string>
    <string name="notAuthorized">Not authorized</string>
    <string name="error500">Internal server error</string>
    <string name="welkom">Welcome wanderer</string>
    <string name="enterVault">Enter the Virtual Vault</string>

    <string name="longerThan6">Password must be at least 6 characters</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_category">Shop</string>
    <string name="welkomVault">Welcome to the vault</string>
    <string name="numberOfCoins">Amount you can spend:</string>
    <string name="goShopping">Go shopping</string>
    <string name="goInventory">Check inventory</string>
    <string name="item">Item:</string>
    <string name="stock">Stock:</string>
    <string name="cost">Cost:</string>
    <string name="descr">Description:</string>
    <string name="amountInv">Amount in inventory:</string>
    <string name="buy">Buy this beauty</string>
    <string name="buyfive">Buy five of these beauties</string>

</resources>
